--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "jwt-decode": "^2.2.0",
     "react": "^16.10.2",
     "react-apollo": "^3.1.2",
+    "react-ckeditor-component": "^1.1.0",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
