--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "react-apollo": "^3.1.2",
     "react-ckeditor-component": "^1.1.0",
     "react-dom": "^16.10.2",
+    "react-pose": "^4.0.10",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
