--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^16.10.2",
     "react-pose": "^4.0.10",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-spinners": "^0.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
